* Changing sanitizeContentCss() to icms_sanitizeContentCss() (malanciault)
* #2011730: Installer: Check for phpOpenID requirements on install (malanciault/skenow)
* #2014053: Installer: Check for php5 on install (malanciault/skenow)
* #2091448: Installer: installation with safemode=on is not possible (malanciault/skenow)

'''Fixed'''
* pass_expired was not set to 0 after lost password request. (only happens if user uses lost password instead of reset password after encryption type is used). (vaughan)
* unable to login when using sha512 or whirlpool encryption.  hash produces 128 chars and db field is set to varchar(100). (vaughan)
* it was not possible to login using email address like v1.0 (vaughan)
* 2 errors with google meta tag and google analytics. (stranger)
* possible issue in modulesadmin/main.php (real_therplima/trabis)
* #2048746: SQL error when creating invites and system_customtags tables (Commerce)
* #2037989: Registration notification sent twice (real_therplima)
* bug with modules when calling editors. (stranger)
* bug "Cannot redeclare class XoopsFormCaptcha". (stranger)
* Language constants in IcmsModuleAbout feature (malanciault)
* bug with pdf generator. (stranger)
* bug Hidencontent doesn`t work with TinyMCE. (stranger)
* # 2090834: Customtag works not with TinyMCE and Custom HTML Blocks (malanciault)
* # 2090834: Customtag works not with TinyMCE and Content Manager (malanciault)
* # 2046097: RSS admin news no longer works  (malanciault)
* # 2046097: Upgrade script modified to update rss_local config with correct info (if value was not previously changed by user) (malanciault)
* #1969061: _AUTH_MSG_AUTH_METHOD = xoops. This message was not saying much to users so the word 'xoops' was changed to 'standard' login (malanciault)
* #1984939: Creating a new CustomTag: Undefined offset: 0 in file /kernel/icmspersistableobjecthandler.php line 262 (malanciault)